refactor(email-button): use cdkCopyToClipboard directive instead of programatically copying an email

--- a/src/components/ui-elements/email-button/email-button.component.html
+++ b/src/components/ui-elements/email-button/email-button.component.html
@@ -1,4 +1,4 @@
-<button mat-button (click)="copyEmail()">
+<button mat-button [cdkCopyToClipboard]="email">
   <mat-icon>content_copy</mat-icon>
   {{email}}
 </button>
