--- a/src/views/home/home.component.scss
+++ b/src/views/home/home.component.scss
@@ -21,12 +21,9 @@ h2 {
 .purple-container {
   padding-top: 56px;
   padding-bottom: 56px;
-  color: white;
-  background: rgb(0, 6, 11);
-  background: linear-gradient(
-    90deg,
-    rgba(0, 6, 11, 1) 0%,
-    rgba(14, 0, 39, 1) 35%,
-    rgba(8, 0, 34, 1) 100%
-  );
+  color: var(--mat-sys-on-primary);
+  background: linear-gradient(45deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)),
+    url("/assets/images/background_2.jpg");
+  background-size: cover;
+  background-position: center;
 }
