--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,7 +26,7 @@ mat-toolbar {
   &.default {
     @include mat.toolbar-overrides(
       (
-        container-background-color: colors.$deep-purple,
+        container-background-color: var(--mat-sys-primary),
         container-text-color: var(--mat-sys-on-primary),
       )
     );
