--- a/src/views/gallery-page/gallery-page.component.html
+++ b/src/views/gallery-page/gallery-page.component.html
@@ -8,9 +8,8 @@
     @for (link of links; track link) {
     <a
       mat-tab-link
-      (click)="activeLink = link"
-      [active]="activeLink == link"
-      [routerLink]="['../', link.route]"
+      [routerLink]="link.route"
+      [active]="activeLink.route === link.route"
     >
       {{ link.label }}
     </a>
@@ -20,4 +19,4 @@
   <mat-tab-nav-panel #tabPanel></mat-tab-nav-panel>
 </div>
 
-<mdlv-gallery [activeCategory]="activeLink.label"></mdlv-gallery>
+<router-outlet></router-outlet>
