feat(gallery): add animation

--- a/src/components/gallery/gallery.component.html
+++ b/src/components/gallery/gallery.component.html
@@ -1,4 +1,4 @@
-<div class="gallery-container">
+<div class="gallery-container" [@galleryThumbnailsTrigger]="images">
   <mdlv-photo-swipe [images]="filteredImages"></mdlv-photo-swipe>
 </div>
 
