fix(gallery): resolve issue with animation not triggering on init

--- a/src/components/gallery/gallery.component.html
+++ b/src/components/gallery/gallery.component.html
@@ -1,7 +1,7 @@
+@if (showImages) {
 <div class="gallery-container" [@galleryThumbnailsTrigger]="images">
   <mdlv-photo-swipe [images]="filteredImages"></mdlv-photo-swipe>
 </div>
-
-@if (isLoading) {
+} @if (isLoading) {
 <mat-spinner diameter="48" class="spinner-container"></mat-spinner>
 }
