--- a/src/components/slideshow/slider/slider.component.html
+++ b/src/components/slideshow/slider/slider.component.html
@@ -1,12 +1,25 @@
 <div class="heroSwiper">
   <div class="swiper-wrapper">
     @for(image of images; track image; let i = $index) {
-    <div class="swiper-slide background" [style.backgroundImage]="'url(' + image.uri + ')'">
-      <div class="overlay" [class.handset]='isHandset'>
-        <h1 [class.handset]='isHandset' [@fadeIn]="activeSlideIndex === i ? '*' : 'void'">
+    <div
+      class="swiper-slide background"
+      [style.backgroundImage]="'url(' + image.uri + ')'"
+    >
+      <div class="overlay" [class.handset]="isHandset">
+        <h1
+          [class.handset]="isHandset"
+          [@fadeIn]="activeSlideIndex === i ? '*' : 'void'"
+        >
           {{ image.text }}
         </h1>
-        <button mat-flat-button [routerLink]="['/kontakt']" @slideIn [@fadeIn]="activeSlideIndex === i ? '*' : 'void'">
+        <button
+          mat-fab
+          extended
+          [routerLink]="['/kontakt']"
+          @slideIn
+          [@fadeIn]="activeSlideIndex === i ? '*' : 'void'"
+        >
+          <mat-icon>mail</mat-icon>
           Zarezerwuj termin
         </button>
       </div>
