style(layouts): store layout constants

--- a/src/layouts/default-layout/default-layout.component.scss
+++ b/src/layouts/default-layout/default-layout.component.scss
@@ -1,4 +1,6 @@
+@use "src/styles/layouts.scss" as layouts;
+
 .default-content-container {
-  max-width: 1200px;
+  max-width: layouts.$content-width;
   margin: 0 auto;
 }
