--- a/src/components/slideshow/slider/slider.component.html
+++ b/src/components/slideshow/slider/slider.component.html
@@ -2,28 +2,31 @@
   <div class="swiper-wrapper">
     @for(image of images; track image; let i = $index) {
     <div
-      class="swiper-slide background"
+      class="swiper-slide slide-container"
       [style.backgroundImage]="'url(' + image.uri + ')'"
     >
-      <div class="overlay" [class.handset]="isHandset">
-        <h1
-          [class.handset]="isHandset"
-          [@fadeIn]="activeSlideIndex === i ? '*' : 'void'"
-        >
-          {{ image.text }}
-        </h1>
-        <button
-          mat-fab
-          extended
-          [routerLink]="['/kontakt']"
-          @slideIn
-          [@fadeIn]="activeSlideIndex === i ? '*' : 'void'"
-        >
-          <mat-icon>mail</mat-icon>
-          Zarezerwuj termin
-        </button>
+      <div class="overlay-container">
+        <div class="overlay" [class.handset]="isHandset">
+          <h1
+            [class.handset]="isHandset"
+            [@fadeIn]="activeSlideIndex === i ? '*' : 'void'"
+          >
+            {{ image.text }}
+          </h1>
+          <button
+            mat-fab
+            extended
+            [routerLink]="['/kontakt']"
+            @slideIn
+            [@fadeIn]="activeSlideIndex === i ? '*' : 'void'"
+          >
+            <mat-icon>mail</mat-icon>
+            Zarezerwuj termin
+          </button>
+        </div>
       </div>
     </div>
+
     }
   </div>
   <div class="swiper-button-next"></div>
