--- a/src/components/slideshow/slider/slider.component.scss
+++ b/src/components/slideshow/slider/slider.component.scss
@@ -14,18 +14,22 @@ button {
   color: var(--mat-sys-on-primary);
 }
 
-.background {
+.slide-container {
   width: 100%;
   height: 100vh;
   background-size: cover;
   background-position: center;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+
+  .overlay-container {
+    width: 1200px;
+    margin-bottom: 10%;
+  }
 }
 
 .overlay {
-  position: absolute;
-  top: 65%;
-  left: 5%;
-  text-align: left;
   color: var(--mat-sys-on-primary);
   &.handset {
     display: flex;
@@ -33,13 +37,12 @@ button {
     align-items: center;
     text-align: center;
     gap: 10px;
-    left: 0%
   }
 }
 
 h1 {
   font-size: 2em;
   &.handset {
-    font-size: 1.5em
+    font-size: 1.5em;
   }
 }
