style(home-button): update colors

--- a/src/components/ui-elements/home-button/home-button.component.scss
+++ b/src/components/ui-elements/home-button/home-button.component.scss
@@ -1,7 +1,7 @@
 .home-button {
-  background-color: #0e0027;
+  background-color: #c9bfff;
   transition: background-color 0.3s ease;
   &:hover {
-    background-color: #fcf65c;
+    background-color: #2e009c;
   }
 }
