style(slider-overlay): use card for the overlay

--- a/src/components/slideshow/slider/slider.component.html
+++ b/src/components/slideshow/slider/slider.component.html
@@ -8,6 +8,7 @@
       <div class="overlay-container">
         <mdlv-slider-overlay
           [isHandset]="isHandset"
+          [title]="image.title"
           [text]="image.text"
           [animationState]="activeSlideIndex === i ? '*' : 'void'"
         ></mdlv-slider-overlay>
