--- a/src/components/slideshow/slider/slider-overlay/slider-overlay.component.html
+++ b/src/components/slideshow/slider/slider-overlay/slider-overlay.component.html
@@ -1,15 +1,19 @@
-<div class="overlay" [class.handset]="isHandset">
-  <h1 [class.handset]="isHandset" [@fadeIn]="animationState">
+<mat-card class="overlay-card" appearance="outlined">
+  <mat-card-header>
+    <mat-card-title [@fadeIn]="animationState"> {{ title }}</mat-card-title>
+  </mat-card-header>
+  <mat-card-content [class.handset]="isHandset" [@fadeIn]="animationState">
     {{ text }}
-  </h1>
-  <button
-    mat-fab
-    extended
-    [routerLink]="['/kontakt']"
-    @slideIn
-    [@fadeIn]="animationState"
-  >
-    <mat-icon>mail</mat-icon>
-    Zarezerwuj termin
-  </button>
-</div>
+  </mat-card-content>
+  <mat-card-actions>
+    <button
+      mat-flat-button
+      [routerLink]="['/kontakt']"
+      @slideIn
+      [@fadeIn]="animationState"
+    >
+      <mat-icon>mail</mat-icon>
+      Skontaktuj się z nami
+    </button>
+  </mat-card-actions>
+</mat-card>
