--- a/src/components/slideshow/slider/slider-overlay/slider-overlay.component.scss
+++ b/src/components/slideshow/slider/slider-overlay/slider-overlay.component.scss
@@ -1,10 +1,22 @@
-.overlay {
-  color: var(--mat-sys-on-primary);
-  &.handset {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    gap: 10px;
-  }
+@use "@angular/material" as mat;
+
+.overlay-card {
+  width: 100%;
+  max-width: 600px;
+  padding: 0.5rem;
+
+  @include mat.card-overrides(
+    (
+      outlined-container-color: mix(#e5deff, transparent, 70%),
+      outlined-container-shape: 30px,
+    )
+  );
+}
+
+mat-card-header {
+  margin-bottom: 0.5rem;
+}
+
+mat-card-content {
+  margin-bottom: 0.3rem;
 }
