--- a/src/components/slideshow/slider/slider-overlay/slider-overlay.component.scss
+++ b/src/components/slideshow/slider/slider-overlay/slider-overlay.component.scss
@@ -7,16 +7,21 @@
 
   @include mat.card-overrides(
     (
-      outlined-container-color: mix(#e5deff, transparent, 70%),
+      outlined-container-color: mix(#e5deff, transparent, 80%),
       outlined-container-shape: 30px,
     )
   );
 }
 
 mat-card-header {
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.7rem;
+}
+
+mat-card-title {
+  font-weight: 500;
 }
 
 mat-card-content {
-  margin-bottom: 0.3rem;
+  margin-bottom: 0.5rem;
+  font-weight: 400;
 }
