--- a/src/views/home-page/home-page.component.html
+++ b/src/views/home-page/home-page.component.html
@@ -1,8 +1,8 @@
 <mdlv-slideshow></mdlv-slideshow>
-
 <div class="break"></div>
 
 <mdlv-offer-banner></mdlv-offer-banner>
+<mdlv-features></mdlv-features>
 
 <div class="break"></div>
 
