--- a/src/components/home/features/features.component.scss
+++ b/src/components/home/features/features.component.scss
@@ -1,10 +1,22 @@
+@use "@angular/material" as mat;
+@use "src/styles/layouts.scss" as layouts;
+
+.features-wrapper {
+  width: 100%;
+  background: linear-gradient(
+    to bottom,
+    var(--mat-sys-surface-bright) 10%,
+    transparent 10%
+  );
+}
+
 .features-container {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  padding-top: 100px;
+  justify-content: space-between;
+  max-width: layouts.$content-width;
+  margin: 0 auto;
   padding-bottom: 100px;
-  gap: 150px;
 }
 
 .features-card {
@@ -14,6 +26,12 @@
   text-align: center;
   padding-top: 30px;
   padding-bottom: 70px;
+
+  @include mat.card-overrides(
+    (
+      outlined-outline-width: 1,
+    )
+  );
 }
 
 .features-card .icon {
