--- a/src/components/contact/contact.component.scss
+++ b/src/components/contact/contact.component.scss
@@ -1,3 +1,5 @@
+@use "src/styles/layouts.scss" as layouts;
+
 .contact-container {
   display: flex;
   flex-direction: row;
@@ -5,8 +7,8 @@
   &.handset {
     flex-direction: column;
     gap: 40px;
-    padding-left: 8px;
-    padding-right: 8px;
+    padding-left: layouts.$handset-side-padding;
+    padding-right: layouts.$handset-side-padding;
   }
 }
 
