--- a/src/components/home/features/features.component.scss
+++ b/src/components/home/features/features.component.scss
@@ -17,13 +17,19 @@
   max-width: layouts.$content-width;
   margin: 0 auto;
   padding-bottom: 100px;
+  &.handset {
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 50px;
+    gap: 30px;
+  }
 }
 
 .features-card {
   display: flex;
   align-items: center;
+  text-align: justify;
   width: 300px;
-  text-align: center;
   padding-top: 30px;
   padding-bottom: 70px;
 
@@ -32,11 +38,20 @@
       outlined-outline-width: 1,
     )
   );
+
+  &.handset {
+    padding-top: 15px;
+    padding-bottom: 35px;
+  }
 }
 
 .features-card .icon {
   width: 40px;
   height: 40px;
+  &.handset {
+    width: 30px;
+    height: 30px;
+  }
 }
 
 .features-card .header {
@@ -47,6 +62,10 @@
   gap: 5px;
   font-size: 24px;
   padding-bottom: 25px;
+  &.handset {
+    font-size: 20px;
+    padding-bottom: 10px;
+  }
 }
 
 .features-card .content {
