--- a/src/components/offer-banner/offer-banner.component.scss
+++ b/src/components/offer-banner/offer-banner.component.scss
@@ -20,7 +20,11 @@
   margin-top: 50px;
   margin-bottom: 30px;
   &.handset {
-    font-size: 32px;
+    font-size: 36px;
+    margin-top: 25px;
+    margin-bottom: 15px;
+    padding-left: layouts.$handset-side-padding;
+    padding-right: layouts.$handset-side-padding;
   }
 }
 
@@ -32,6 +36,10 @@
   background-color: var(--mat-sys-surface-bright);
   padding-top: 50px;
   padding-bottom: 50px;
+  &.handset {
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
 }
 
 .offer-banner-text-secondary {
@@ -41,7 +49,10 @@
   line-height: 1.5;
   color: var(--mat-sys-on-surface);
   &.handset {
+    text-align: justify;
     font-size: 16px;
+    padding-left: layouts.$handset-side-padding;
+    padding-right: layouts.$handset-side-padding;
   }
 }
 
@@ -55,6 +66,9 @@
     url("/assets/images/logo_bg.jpg");
   background-size: cover;
   background-position: center;
+  &.handset {
+    height: 150px;
+  }
 }
 
 .offer-banner-logo {
