--- a/src/components/slideshow/slider/slider-overlay/slider-overlay.component.html
+++ b/src/components/slideshow/slider/slider-overlay/slider-overlay.component.html
@@ -1,8 +1,14 @@
-<mat-card class="overlay-card" appearance="outlined">
+<mat-card
+  class="overlay-card"
+  [class.handset]="isHandset"
+  appearance="outlined"
+>
   <mat-card-header>
-    <mat-card-title [@fadeIn]="animationState"> {{ title }}</mat-card-title>
+    <mat-card-title [@fadeIn]="animationState">
+      {{ title }}
+    </mat-card-title>
   </mat-card-header>
-  <mat-card-content [class.handset]="isHandset" [@fadeIn]="animationState">
+  <mat-card-content [@fadeIn]="animationState">
     {{ text }}
   </mat-card-content>
   <mat-card-actions>
