style: small features and offer-banner changes

--- a/src/components/home/features/features.component.scss
+++ b/src/components/home/features/features.component.scss
@@ -3,11 +3,7 @@
 
 .features-wrapper {
   width: 100%;
-  background: linear-gradient(
-    to bottom,
-    var(--mat-sys-surface-bright) 10%,
-    transparent 10%
-  );
+  background: linear-gradient(to bottom, #786cbf 10%, transparent 10%);
 }
 
 .features-container {
