--- a/src/components/offer-banner/offer-banner.component.html
+++ b/src/components/offer-banner/offer-banner.component.html
@@ -8,8 +8,8 @@
     />
   </div>
   <div class="offer-banner-text-primary" [class.handset]="isHandset">
-    Twoje Wydarzenie<br />
-    w Nowym Świetle
+    TWOJE WYDARZENIE<br />
+    W NOWYM ŚWIETLE
   </div>
   <div
     class="offer-banner-text-secondary-container"
