--- a/src/components/offer-presentation/offer-presentation-grids/offer-presentation-grids.component.scss
+++ b/src/components/offer-presentation/offer-presentation-grids/offer-presentation-grids.component.scss
@@ -12,6 +12,7 @@ mat-grid-tile {
   width: 100%;
   padding: 32px;
   gap: 22px;
+  color: var(--mat-sys-on-secondary-container);
 }
 
 .tile-background {
