chore: add smooth scrolling, use fragment nav for contant

--- a/src/components/navigation/navbar/navbar.component.html
+++ b/src/components/navigation/navbar/navbar.component.html
@@ -28,6 +28,6 @@
   <div class="button-group">
     <button mat-button [routerLink]="['galeria']">Galeria</button>
     <button mat-button [routerLink]="['wycena']">Wycena</button>
-    <button mat-button [routerLink]="['kontakt']">Kontakt</button>
+    <button mat-button [routerLink]="['/']" fragment="kontakt">Kontakt</button>
   </div>
 </ng-template>
