--- a/src/features/gallery/components/gallery.component.scss
+++ b/src/features/gallery/components/gallery.component.scss
@@ -1,15 +1,16 @@
 .gallery-container {
-  padding-bottom: 80px;
+  margin-bottom: 96px;
   padding-left: 8px;
   padding-right: 8px;
+  &.handset {
+    margin-bottom: 80px;
+  }
 }
 
 .spinner-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: fixed;
-  bottom: 0;
-  left: 50%;
-  margin-bottom: 16px;
+  margin: 0 auto;
+  margin-top: 24px;
 }
