feat(gallery): show loading spinner on init

--- a/src/features/gallery/components/gallery.component.html
+++ b/src/features/gallery/components/gallery.component.html
@@ -5,7 +5,7 @@
 >
   @if (showImages) {
   <mdlv-photo-swipe [images]="filteredImages()"></mdlv-photo-swipe>
-  } @if (isLoading) {
+  } @if (isLoading()) {
   <mat-spinner
     [diameter]="spinnerDiameter"
     class="spinner-container"
