feat(gallery): use lazy loading, remove preloading

--- a/src/features/gallery/components/photo-swipe/photo-swipe.component.html
+++ b/src/features/gallery/components/photo-swipe/photo-swipe.component.html
@@ -9,7 +9,7 @@
       target="_blank"
     >
       <mat-grid-tile [style.background]="image.thumbnailUri">
-        <img [src]="image.thumbnailUri" alt="Gallery image" />
+        <img [src]="image.thumbnailUri" alt="Gallery image" loading="lazy" />
       </mat-grid-tile>
     </a>
     }
