chore(gallery): remove img batching, clean up some timeout based flags

--- a/src/features/gallery/components/gallery.component.html
+++ b/src/features/gallery/components/gallery.component.html
@@ -3,9 +3,8 @@
   [class.handset]="isHandset"
   [@galleryThumbnailsTrigger]="filteredImages()"
 >
-  @if (showImages) {
   <mdlv-photo-swipe [images]="filteredImages()"></mdlv-photo-swipe>
-  } @if (isLoading()) {
+  @if (isLoading()) {
   <mat-spinner
     [diameter]="spinnerDiameter"
     class="spinner-container"
